updated value and reference section

--- a/2. Primitive Types and Variables/Value and Reference Types.ipynb
+++ b/2. Primitive Types and Variables/Value and Reference Types.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "|<span style=\"color: brown;\">Value</span>|<span style=\"color: green;\">Reference</span>|\n",
     "|   ---   |     ---     |\n",
-    "|![you fucked up](../_img/CSharpValueTypes.jpg)| ![you fucked up](../_img/CSharpReferenceTypes.jpg)|  |\n",
+    "|![you fucked up](./_img/CSharpValueTypes.jpg)| ![you fucked up](./_img/CSharpReferenceTypes.jpg)|  |\n",
     "\n",
     "---"
    ]
@@ -48,6 +48,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [],
@@ -130,6 +133,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -160,6 +166,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
