--- a/3. Operators and Expressions/Type Conversion and Casting.ipynb
+++ b/3. Operators and Expressions/Type Conversion and Casting.ipynb
@@ -56,6 +56,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -89,6 +92,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -196,6 +202,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [],
@@ -209,6 +218,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -233,6 +245,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -260,6 +275,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -287,6 +305,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -349,6 +370,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -451,6 +475,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -483,6 +510,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
