--- a/3. Operators and Expressions/_Exercises/Exercises.ipynb
+++ b/3. Operators and Expressions/_Exercises/Exercises.ipynb
@@ -50,6 +50,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -117,6 +120,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -188,6 +194,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -269,6 +278,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -372,6 +384,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -493,6 +508,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -568,6 +586,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -710,6 +731,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -798,6 +822,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -865,6 +892,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
