--- a/2. Primitive Types and Variables/Variables.ipynb
+++ b/2. Primitive Types and Variables/Variables.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![you fucked up](../_img/CSharp_Variable.jpg)\n",
+    "![you fucked up](./_img/CSharp_Variable.jpg)\n",
     "\n",
     "**Variables** are characterized by: \n",
     "- **name** (identifier)\n",
@@ -158,6 +158,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
