--- a/3. Operators and Expressions/Operators/String Concatenation Operator.ipynb
+++ b/3. Operators and Expressions/Operators/String Concatenation Operator.ipynb
@@ -32,6 +32,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
