fixed more bad img links

--- a/2. Primitive Types and Variables/Value and Reference Types.ipynb
+++ b/2. Primitive Types and Variables/Value and Reference Types.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![you fukked up](../_img/Val_Ref_Types_2.jpg)"
+    "![you fukked up](./_img/Val_Ref_Types_2.jpg)"
    ]
   },
   {
