--- a/2. Primitive Types and Variables/Value and Reference Types.ipynb
+++ b/2. Primitive Types and Variables/Value and Reference Types.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![you fukked up](../_img/Val_Ref_Types_1.jpg)"
+    "![you fukked up](./_img/Val_Ref_Types_1.jpg)"
    ]
   },
   {
