Updated Conditional Sttatements section. working on exercises.

--- a/3. Operators and Expressions/Operators/Bitwise Operators.ipynb
+++ b/3. Operators and Expressions/Operators/Bitwise Operators.ipynb
@@ -38,7 +38,39 @@
     "In computers all the data and particularly numerical data is\n",
     "represented as a series of *ones and zeros*.  \n",
     "   \n",
-    "The *binary* numeral system is used for this purpose.   \n",
+    "The *binary* numeral system is used for this purpose. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public string ToBinary( int numToConvert )\n",
+    "{\n",
+    "    return Convert.ToString(\n",
+    "        numToConvert,\n",
+    "        2\n",
+    "    ).PadLeft( 8 ).Replace( ' ', '0' );\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
     "\n",
     "For example, number $55$ in the *binary* numeral system\n",
     "is represented as `00110111`."
@@ -59,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "110111"
+       "00110111"
       ]
      },
      "metadata": {},
@@ -67,10 +99,14 @@
     }
    ],
    "source": [
-    "Convert.ToString(\n",
-    "    int.Parse(\"55\"),\n",
-    "    2\n",
-    ")"
+    "ToBinary(55)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -79,7 +115,7 @@
    "source": [
     "The *bitwise operators* performance on *binary digits* `0` and `1` is shown in the following table:\n",
     "\n",
-    "|$x$     |$y$    |$~x$   |$x\\;\\&\\;y$  |$x\\;\\|\\;y$  |$x\\;^\\wedge{\\;y}$  |\n",
+    "|$x$     |$y$    |~$x$   |$x\\;\\&\\;y$  |$x\\;\\|\\;y$  |$x\\;^\\wedge{\\;y}$  |\n",
     "| :---:   | :---:  |:---:   | :---: | :---:   | :---:   |\n",
     "|1  |1 |`0`|`1`  |`1`  |`0`|\n",
     "|1  |0|`0`|`0` |`1`  |`1` |\n",
@@ -191,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "00000011"
       ]
      },
      "metadata": {},
@@ -201,10 +237,7 @@
    "source": [
     "// First, take the number 3, which is 00000011 in binary\n",
     "\n",
-    "Convert.ToString(\n",
-    "    int.Parse(\"3\"),\n",
-    "    2\n",
-    ")"
+    "ToBinary(3)"
    ]
   },
   {
@@ -251,7 +284,7 @@
     {
      "data": {
       "text/plain": [
-       "1100"
+       "00001100"
       ]
      },
      "metadata": {},
@@ -262,10 +295,7 @@
     "// By converting 12 to binary, we see that it is inddeed the same as 3,\n",
     "// except that the bits simply moved 2 positions to the left\n",
     "\n",
-    "Convert.ToString(\n",
-    "    int.Parse(\"12\"),\n",
-    "    2\n",
-    ")"
+    "ToBinary(12)"
    ]
   },
   {
@@ -295,32 +325,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting the number 6 we have:\t110 in binary\n",
+      "Converting the number 6 we have: 00000110 in binary\n",
       "\n",
-      "Shifting 6, ( 00000110 ), 2 bits to the right, we have:\t1    in base 10,\n",
-      "which converts to:\t00000001   in binary\r\n"
+      "Shifting 6, ( 00000110 ), 2 bits to the right, we have:\t1 in base 10,\n",
+      "which converts to: 00000001 in binary\r\n"
      ]
     }
    ],
    "source": [
     "Console.WriteLine(\n",
     "\n",
-    "    \"Converting the number 6 we have:\\t\" + \n",
+    "    \"Converting the number 6 we have: \" + \n",
     "\n",
-    "    Convert.ToString(\n",
-    "        int.Parse(\"6\"),\n",
-    "        2\n",
-    "    ) + \" in binary\" +\n",
+    "    ToBinary(6) + \" in binary\" +\n",
     "\n",
     "    \"\\n\\n\" +\n",
     "\n",
     "    \"Shifting 6, ( 00000110 ), 2 bits to the right, we have:\\t\" +\n",
     "    \n",
-    "    $\"{6 >> 2}    in base 10,\\n\" +\n",
+    "    $\"{1} in base 10,\\n\" +\n",
     "\n",
-    "    \"which converts to:\\t\" +\n",
+    "    \"which converts to: \" +\n",
     "\n",
-    "    \"00000001   in binary\"\n",
+    "    $\"{ToBinary(6 >> 2)} in binary\"\n",
     "\n",
     ")"
    ]
