--- a/3. Operators and Expressions/Operators/Comparison Operators.ipynb
+++ b/3. Operators and Expressions/Operators/Comparison Operators.ipynb
@@ -213,7 +213,7 @@
     "// the binary representation of 'a'\n",
     "\n",
     "Convert.ToString(\n",
-    "    int.Parse( $\"{ Convert.ToInt32('a') }\" ),\n",
+    "    Convert.ToInt32('a'),\n",
     "    2\n",
     ")"
    ]
@@ -373,7 +373,7 @@
     }
    ],
    "source": [
-    "our_reference_type == another_pointing_at_same_place_in_memory"
+    "our_reference_type == another_pointing_at_same_place_in_memory "
    ]
   },
   {
