--- a/4. Console Input and Output/Printing to the Console/Formatted Output.ipynb
+++ b/4. Console Input and Output/Printing to the Console/Formatted Output.ipynb
@@ -62,7 +62,7 @@
     "   \n",
     "The *first argument* is indicated by `{0}`, the *second* by `{1}`, etc.   \n",
     "   \n",
-    "The ***composite formatting string*** allows having *multiple **formatting items*** that relate to one and same argument. \n",
+    "The ***composite formatting string*** allows having *multiple **formatting items*** that relate to one and the same argument. \n",
     "      \n",
     "- In this case index component of these items is one and the same number. \n",
     "   \n",
