--- a/4. Console Input and Output/Printing to the Console/Console.Write(…) vs  Console.WriteLine(…).ipynb
+++ b/4. Console Input and Output/Printing to the Console/Console.Write(…) vs  Console.WriteLine(…).ipynb
@@ -29,6 +29,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [],
@@ -57,6 +60,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
@@ -94,6 +100,9 @@
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
     }
    },
    "outputs": [
