modified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -564,7 +564,7 @@
     "Assembly:$\\;\\;$ System.Linq.dll \n",
     "\n",
     "##### Parameters \n",
-    "`source` $\\;$ $\\footnotesize\\text{IEnumerable<Int32>}$\n",
+    "`source` $\\small{\\text{IEnumerable<Int32>}}$\n",
     "   \n",
     "A sequence of `Int32` values to determine the maximum value of.\n",
     "\n",
