modified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -113,11 +113,12 @@
     "\\begin{equation}\n",
     "C = 2\\pi{r} \\tag{2}\n",
     "\\end{equation}\n",
+    "\n",
     "\\begin{equation}\n",
     " \\,\\,\\,\\,\\,\\, = \\pi{d} \\tag{3}\n",
     "\\end{equation}\n",
     "\n",
-    "$\\footnotesize{\\text{where }r\\text{ is the radius of the circle and }d\\text{ is the diameter}}$"
+    "$\\small{{\\text{where }r\\text{ is the radius of the circle and }d\\text{ is the diameter}}}$"
    ]
   },
   {
@@ -187,7 +188,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "#### The ***manager*** has a: \n",
+    "#### The **manager** has a: \n",
     "\n",
     "<table>\n",
     "  <tbody>\n",
@@ -397,16 +398,18 @@
     "\n",
     "##### Parameters \n",
     "`start` $\\;$ $\\footnotesize\\text{Int32}$\n",
-    "<br>\n",
+    "   \n",
     "The value of the first integer in the sequence.\n",
-    "<br><br>   \n",
-    "`count` $\\;$ $\\footnotesize\\text{Int32}$\n",
-    "<br>\n",
-    "The number of sequential integers to generate.   \n",
     "\n",
+    "<br>\n",
+    "\n",
+    "`count` $\\;$ $\\small{\\text{Int32}}$\n",
+    "   \n",
+    "The number of sequential integers to generate.   \n",
+    "   \n",
     "##### Returns \n",
     "[IEnumerable\\<Int32>](https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ienumerable-1?view=net-6.0) $\\;$\n",
-    "<br>\n",
+    "   \n",
     "An `IEnumerable<Int32>` that contains a range of sequential integral numbers."
    ]
   },
@@ -442,11 +445,11 @@
     "The type of the elements of `source`.\n",
     "\n",
     "##### Parameters \n",
-    "`source` $\\;$ $\\footnotesize\\text{IEnumerable<TSource>}$\n",
+    "`source` $\\;$ $\\small{\\text{IEnumerable<TSource>}}$\n",
     "<br>\n",
     "An IEnumerable<T> to filter.\n",
     "<br><br>   \n",
-    "`predicate` $\\;$ $\\footnotesize\\text{Func<TSource,Boolean>}$\n",
+    "`predicate` $\\;$ $\\small{\\text{Func<TSource,Boolean>}}$\n",
     "<br>\n",
     "A function to test each element for a condition.\n",
     "\n",
@@ -564,7 +567,7 @@
     "Assembly:$\\;\\;$ System.Linq.dll \n",
     "\n",
     "##### Parameters \n",
-    "`source` $\\small{\\text{IEnumerable<Int32>}}$\n",
+    "`source` $\\;$ $\\small{\\text{IEnumerable<Int32>}}$\n",
     "   \n",
     "A sequence of `Int32` values to determine the maximum value of.\n",
     "\n",
