modified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -70,9 +70,7 @@
     "The **grey space** is the **area of the circle**:    \n",
     "\n",
     "<center>\n",
-    "\n",
-    "![youfukkeduup](https://www.math.net/img/a/geometry/circles/area-of-a-circle/area-of-a-circle.png)\n",
-    "\n",
+    "<img src = \"https://www.math.net/img/a/geometry/circles/area-of-a-circle/area-of-a-circle.png\">\n",
     "</center>\n",
     "   \n",
     "$\\textit{Consequently}$,    \n",
@@ -82,7 +80,7 @@
     "A = \\pi{r}^2\n",
     "\\end{equation}\n",
     "\n",
-    "$\\footnotesize{\\text{where } A\\text{ is area },r\\text{ is radius, and } \\pi \\text{ is approximately equal to }3.14159}$"
+    "$\\small{{\\text{where } A\\text{ is area },r\\text{ is radius, and } \\pi \\text{ is approximately equal to }3.14159}}$"
    ]
   },
   {
