modified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\textit{Recall from:\\qquad}$ [Printing to the Console | Formatted Output](../Printing%20to%20the%20Console/Formatted%20Output.ipynb)\n",
+    "$\\textit{Recall from:}\\qquad$ [Printing to the Console | Formatted Output](../Printing%20to%20the%20Console/Formatted%20Output.ipynb)\n",
     "\n",
     "The ***composite formatting string*** is a *mixture of **normal text** and **formatting items:***\n",
     "<center>\n",
