odified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -395,7 +395,7 @@
     "Assembly:$\\;\\;$ System.Linq.dll \n",
     "\n",
     "##### Parameters \n",
-    "`start` $\\;$ $\\footnotesize\\text{Int32}$\n",
+    "`start` $\\;$ $\\small{\\text{Int32}}$\n",
     "   \n",
     "The value of the first integer in the sequence.\n",
     "\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
