modified:   4. Console Input and Output/_Exercises/Exercises.ipynb

--- a/4. Console Input and Output/_Exercises/Exercises.ipynb
+++ b/4. Console Input and Output/_Exercises/Exercises.ipynb
@@ -68,9 +68,10 @@
     "The *area of a [circle](https://www.math.net/circle)* is the *[plane](https://www.math.net/plane) region* bounded by the *circle's [circumference](https://www.math.net/circumference)*. \n",
     "   \n",
     "The **grey space** is the **area of the circle**:    \n",
-    "\n",
     "<center>\n",
+    "\n",
     "<img src = \"https://www.math.net/img/a/geometry/circles/area-of-a-circle/area-of-a-circle.png\">\n",
+    "\n",
     "</center>\n",
     "   \n",
     "$\\textit{Consequently}$,    \n",
@@ -817,16 +818,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> $from:\\qquad$ [WolframAlpha | \"Fibonacci(100)\"](https://www.wolframalpha.com/input?i=Fibonacci%28100%29)   \n",
+    "$from:\\qquad$ [WolframAlpha | \"Fibonacci(100)\"](https://www.wolframalpha.com/input?i=Fibonacci%28100%29)   \n",
     "\n",
     "<center>\n",
     "\n",
-    "> ![ufukkedup](../_img/wolfram_exercise11.jpg)\n",
+    "![ufukkedup](../_img/wolfram_exercise11.jpg)\n",
     "\n",
     "</center>\n",
     "\n",
-    "> $Resultantly$,   \n",
-    "> The *maximum size constraints* of many of C#'s primitive data types are **overmatched by the larger Fibonacci values**:   "
+    "$Resultantly$,   \n",
+    "The *maximum size constraints* of many of C#'s primitive data types are **overmatched by the larger Fibonacci values**:   "
    ]
   },
   {
