--- a/5. Conditional Statements/If, If-Else, Else If.ipynb
+++ b/5. Conditional Statements/If, If-Else, Else If.ipynb
@@ -209,20 +209,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> $\\textit{Recall from:}\\qquad$ [3. Operators and Expressions | Conditional Operator ?:](../3.%20Operators%20and%20Expressions/Operators/Conditional%20Operator.ipynb)\n",
+    "$\\textit{Recall from:}\\qquad$ [3. Operators and Expressions | Conditional Operator ?:](../3.%20Operators%20and%20Expressions/Operators/Conditional%20Operator.ipynb)\n",
     "\n",
-    "> The **conditional operator** `?:` uses the *Boolean value* of an expression to determine *which of two other expressions must be returned as a result*. \n",
-    "> \n",
-    "> The operator works on **three operands** and that is why it is called a\n",
-    "> **ternary** operator.   \n",
-    ">   \n",
-    "> The character `?` is placed *between the first and second operand*,   \n",
-    "> and `:` is placed *between the second and third operand*.  \n",
-    "> - The *first operand* (or expression) must be `bool` type, and the *next two operands* must be of the *same type*, such as numbers or strings.\n",
+    "The **conditional operator** `?:` uses the *Boolean value* of an expression to determine *which of two other expressions must be returned as a result*. \n",
     "\n",
-    "> The operator `?:` has the following syntax:\n",
-    ">    \n",
-    "> $$\\text{operand1 \\,?\\,\\, operand2 \\,:\\,\\, operand3}$$"
+    "The operator works on **three operands** and that is why it is called a\n",
+    "**ternary** operator.   \n",
+    "  \n",
+    "The character `?` is placed *between the first and second operand*,   \n",
+    "and `:` is placed *between the second and third operand*.  \n",
+    "- The *first operand* (or expression) must be `bool` type, and the *next two operands* must be of the *same type*, such as numbers or strings.\n",
+    "\n",
+    "The operator `?:` has the following syntax:\n",
+    "   \n",
+    "$$\\text{operand1 \\,?\\,\\, operand2 \\,:\\,\\, operand3}$$"
    ]
   },
   {
